--- a/sass/blocks/schedule.scss
+++ b/sass/blocks/schedule.scss
@@ -4,14 +4,18 @@
 
 .schedule__table {
   border-collapse: collapse;
+
+  width: 100%;
 }
 
 .schedule__top {
   text-align: center;
   background-color: #2d89ef;
   color: #ffffff;
+  font-weight: bold;
   & .schedule__cell {
     border: none;
+    min-height: 50px;
   }
 }
 
@@ -85,5 +89,29 @@
   &:hover {
     background-color: #aeaeae;
     color: #ffffff;
+  }
+}
+
+.lectors-filter {
+  border: 1px solid #eaeaea;
+  padding: 10px;
+
+  & h2 {
+    margin-top: 0;
+    text-transform: uppercase;
+    font-size: 20px;
+  }
+
+  & span {
+    display: inline-block;
+    padding: 5px 10px;
+    cursor: pointer;
+
+    font-weight: bold;
+
+    &.disabled {
+      color: #aeaeae;
+      text-decoration: line-through;
+    }
   }
 }
